--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 ###> symfony/uploads ###
 /public/uploads
 ###< symfony/uploads ###
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
